app/assets/stylesheets/droom/_ed.sass
=paramarker
  content: "❡ "
  color: $pale
  font-size: 1rem
  display: inline-block
  float: left
  width: 20px
  margin-left: -24px
  margin-top: -3px

#editor, .editor
  [contenteditable]:not([contenteditable=false])
    outline: none
    font-size: inherit
    padding: 0
    &[data-placeholder]
      &:empty
        color: $pale
        font-style: italic
        text-transform: none
        &:before
          content: attr(data-placeholder)

  span[contenteditable]
    display: inline-block
    cursor: text

a.control, label.control
  pointer-events: auto
  display: inline-block
  vertical-align: top
  width: 32px
  height: 32px
  margin-left: 2px
  margin-bottom: 8px
  cursor: pointer
  overflow: hidden
  color: white
  opacity: 1
  transition: color 0.25s ease-out, opacity 0.25s ease-out
  border-radius: 16px
  border: 1px solid white
  background-color: white
  &:hover
    opacity: 1
  input[type="file"]
    display: none
  svg
    width: 32px
    height: 32px
    transition: transform 0.5s ease-out
  &.delete
    color: $red
  &.import
    color: $blue
  &.choose
    color: $orange
  &.add
    color: $green
  &.properties
    color: $mid
  &.small
    width: 24px
    height: 24px
    svg
      width: 24px
      height: 24px

span.note
  color: $pale
  font-size: 0.9rem
  line-height: 1.2

.ed-progress
  display: none
  width: 100px
  height: 100px
  position: absolute
  top: calc(50% - 50px)
  left: calc(50% - 50px)
  margin: 0
  .label
    position: absolute
    display: block
    top: 0
    left: 0
    width: 100%
    height: 100%
    text-align: center
    color: white
    text-shadow: 0 0 10px $shadow
    font-weight: lighter
    font-size: 1rem
    line-height: 100px
    &.processing
      font-size: 1rem

.ed-content, .ed-intro
  .placeholder
    color: $mid
    font-style: italic

.ed-image, .editing figure
  cursor: pointer
  position: relative
  width: 100%
  height: 100%
  display: flex
  align-items: flex-start
  justify-content: center
  transition: background-position 0.5s ease-in-out
  background:
    repeat: no-repeat
    position: center bottom
    size: cover
  p
    color: $pale
  .darken
    display: none
  .ed-dropmask
    position: absolute
    top: 0
    left: 0
    width: 100%
    height: 100%
    display: flex
    align-items: center
    justify-content: center
    cursor: pointer
    p.prompt
      color: $menubg
      pointer-events: none
      mix-blend-mode: normal
      font-size: 1rem
      margin: 0
      padding: 0.5em 1em
    &.droppable
      background-color: $green
      mix-blend-mode: difference

.ed-image
  background:
    color: $mid


.editing
  .blockset
    position: relative
    .ed-buttons
      right: 0
      left: auto
      &.inactive
        visibility: hidden
        a
          pointer-events: none
          color: $pale
  .blocks
    .block
      a.remove
        position: absolute
        display: none
        left: -28px
        top: 14px
        color: $red
        cursor: pointer
        z-index: 100
        svg
          width: 24px
          height: 24px
      h3, p
        &:empty
          min-height: 2em
          border: 1px dotted $verypale
        &:before
          +paramarker
      &:hover
        a.remove
          display: block

  figure, div.bl
    position: relative
    min-height: 48px
    margin: 0 -20px
    blockquote
      min-height: 1em
      min-width: 1em
    .holder
      display: block
      position: relative
    figcaption
      display: block
      min-height: 1em
      margin: 8px 20px
      text-align: center
      z-index: 300
      cursor: text
    img[src=""]
      display: block
      padding-bottom: 56%
      width: 100%
      background-color: $verypale
    .ed-controls
      position: absolute
      bottom: 0
      right: 0
      a.save
        +button($green)
        font-size: 0.9rem
        padding: 4px 10px
        display: none
  .ed-buttons
    position: absolute
    width: calc(100% - 24px)
    top: 12px
    left: 12px
    .uploader, .importer, .picker, .styler, .config, .weighter, .remover
      display: block
      margin: 0
    .uploader, .importer, .picker
      float: left
      margin-right: 4px
    .delete, .styler, .weighter
      float: right
      margin-left: 4px
    .thumbnails, .select
      display: inline-block
      vertical-align: top
  &:hover, &.hold
    .ed-buttons
      display: block
  & > p:before
    +paramarker
  .bl
    transition:
      properties: width height
      duration: 0.5s
      easing: ease-out
    figure
      transition:
        properties: width height
        duration: 0.5s
        easing: ease-out
    .ed-buttons
      top: -12px
      right: -12px

  .layout_controls
    .buttons
      a.save
        +button($green)
        display: none

.touch
  .ed-buttons
    display: block

.ed-inserter
  position: absolute
  box-sizing: border-box
  white-space: nowrap
  display: none
  z-index: 1000
  height: 36px
  width: 30px
  padding: 6px 0
  overflow: hidden
  top: 0
  left: 0
  transition: width 0.25s ease-out
  a.control
    width: 28px
    height: 28px
    color: $mid
    svg
      width: 24px
      height: 24px
    &:hover
      color: $green
  &.showing
    width: 250px
    a.control.show
      svg
        transform: rotate(45deg)
      &:hover
        color: $red
  .ed-buttons
    position: relative
    display: block
    width: 250px
    a.control
      margin-right: 2px

.ed-menu
  display: inline-block
  text-align: left
  .menu-body
    position: absolute
    display: none
    z-index: 500
    left: 10px
    top: 10px
    width: 340px
    overflow: hidden
    padding: 0
    background-color: white
    box-sizing: border-box
    pointer-events: auto
    border-radius: 8px
    box-shadow: 0 2px 8px $shadow
    a.sidestep, a.close
      cursor: pointer
      color: $pale
      &:hover
        color: $mid
    a.sidestep
      color: $mid
      +hover
    a.close
      display: block
      position: absolute
      top: 10px
      right: 10px
      svg
        width: 28px
        height: 28px
    h3
      margin: 10px 0 10px 10px
      svg
        width: 32px
        height: 32px
      svg, span.label
        display: inline-block
        vertical-align: middle
    .weighter &
      right: 32px
      left: auto
      width: 72px
      height: 72px

.open
  .ed-menu
    &>a.control, &>label.control
      border-radius: 0
      background-color: white
      padding-bottom: 5px
      z-index: 501
    .menu-body
      display: block

ul.image-buttons
  padding: 0
  margin: 16px 0 0 20px
  list-style: none
  li.asset
    position: relative
    display: inline-block
    float: left
    margin: 10px
    width: 36px
    height: 36px
    border-radius: 36px

ul.ed-assets
  padding: 0
  margin: 16px 0 0 20px
  list-style: none
  li.empty
    color: $mid
    margin: 20px

  li.asset
    position: relative
    display: inline-block
    float: left
    margin: 0 16px 16px 0
    width: 48px
    height: 48px
    .ed-progress
      width: 40px
      height: 40px
      position: absolute
      display: none
      margin: 4px
      pointer-events: none
      .label
        display: none
    a.delete
      display: none
      position: absolute
      top: -15px
      right: -5px
      width: 16px
      height: 16px
      box-sizing: border-box
      color: $red
      svg.icon
        width: 16px
        height: 16px
    a.preview
      display: block
      width: 48px
      height: 48px
      box-sizing: border-box
      padding: 6px
      text-align: right
      font-size: 1rem
      cursor: pointer
      color: white
      background:
        color: $pale
        position: center center
        size: cover
        repeat: no-repeat
    &:hover
      a.delete
        display: block
    input
      position: absolute
      left: 1000px
    span.ed-progress
      display: block
      position: absolute
      bottom: 4px
      right: 4px
      width: 40px !important
      height: 40px !important
      margin-top: -20px !important
      margin-left: -20px !important

.ed-properties
  p.caption
    height: 140px
    overflow: auto
    margin-top: 0
    padding: 10px
  .buttons
    position: absolute
    bottom: 10px
    left: 10px
    color: $mid
    a.button
      float: left
      display: inline-block
      vertical-align: top

.pinner
  margin: 16px
  width: 40px
  span.label
    display: block
  .sectors
    position: relative
    float: right
    width: 40px
    height: 40px
    input
      display: none
    input + span
      background-color: $pale
    input:checked + span
      background-color: $green
    label.sector
      background-color: $pale
      span
        position: absolute
        display: block
        width: 12px
        height: 12px
        &:hover
          backround-color: $mid
        &.tl
          top: 0
          left: 0
        &.tc
          top: 0
          left: 14px
        &.tr
          top: 0
          right: 0
        &.ml
          top: 14px
          left: 0
        &.mc
          top: 14px
          left: 14px
        &.mr
          top: 14px
          right: 0
        &.bl
          bottom: 0
          left: 0
        &.bc
          bottom: 0
          left: 14px
        &.br
          bottom: 0
          right: 0

.ed-search
  margin: 20px 0 0 20px !important
  clear: both
  span.heading
    display: inline-block
    vertical-align: top
    width: 226px
    text-align: center
    font-weight: bold
    font-size: 1rem
  a
    display: inline-block
    vertical-align: top
    box-sizing: border-box
    height: 32px
    width: 32px
    padding: 0
    color: $dark
    cursor: pointer
    svg
      height: 32px
      width: 32px
    &.inactive
      color: $pale
      pointer-events: none

.ed-importer
  margin: 6px 0 20px 20px !important
  clear: both
  input, a.button
    display: inline-block
    vertical-align: top
    box-sizing: border-box
    padding: 8px
    height: 36px
    font-size: 0.9rem
    line-height: 20px
    margin: 0
  input
    width: 220px
    margin-right: 16px
    color: $dark
    border: 1px solid $pale
    outline: none
  a.button
    background-color: $blue
    color: white
    width: 64px
    cursor: pointer
    white-space: nowrap
    &.waiting
      background:
        position: center center
        color: $pale
      opacity: 1
      text-indent: 100px
  p.waiter
    display: none
    width: 60%
    color: $mid



@media (max-width: 700px)
  .ed-inserter
    padding-left: 24px

